--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Zwigato-Food</title>
   </head>
   <body>
-    <div id="root">Not rendered</div>
-    <script src="/src/index.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
